# GP_Boundary_shrinker

./: AUTHORS  ChangeLog  Doxyfile  Makefile.in  NEWS  TODO  aclocal.m4  autogen.sh  configure  configure.in
help/: Makefile.in
help/en/: Makefile.in
help/images/: Makefile.in
po/: fr.po  sv.po
src/: Makefile.am  Makefile.in  interface.c  interface.h  main.c  main.h  plugin-intl.h  render.c  render.h
